fix alignment

--- a/src/styles/components/navbar.scss
+++ b/src/styles/components/navbar.scss
@@ -16,4 +16,9 @@
       }
     }
   }
+
+  .dropdown,
+  .dropdown-item {
+    text-align: right;
+  }
 }
